--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html></html>[D[D[D[D[D[D[D
-[A[C[C[C[C[C[C
-[C[A[A[B[C[C[C[C[C[C[C[C[C[
+<html></html>
 <head></head>
 <body></body>
 </html>
